--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "component-size",
   "repository": "git://github.com/ianstormtaylor/component-size.git",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "license": "MIT",
   "description": "A component command to list the sizes of all your component's dependencies.",
   "keywords": [
@@ -15,9 +15,7 @@
     "commander": "1.0.5",
     "component": "~0.17.6",
     "extend": "~1.2.1",
-    "pad-component": "0.0.1",
-    "map": "git://github.com/ianstormtaylor/map",
-    "each-component": "git://github.com/component/each"
+    "pad-component": "0.0.1"
   },
   "bin": {
     "component-size": "bin/component-size"
